# HRRL_go1_dynamics_V1

./: .gitignore  README.md
GO1/: CMakeLists copy.txt  CMakeLists.txt
GO1/config/: WBC_config.yaml  pd_config.yaml  runner_config.yaml
GO1/policy/: policy_1.onnx
GO1/src/: main.cpp
GO1/src/controllers/: ControlUtils.h  Controllers.hpp  Daemon.cpp  Daemon.hpp  JointPositionPDController.cpp  JointPositionPDController.hpp  Joystick.cpp  Joystick.hpp  OnnxRunner.cpp  OnnxRunner.h  SharedMemory.hpp  TaskController.cpp  TaskController.hpp
GO1/src/controllers/Dynamics/: DynamicsController.cpp  DynamicsController.hpp  enum.h
GO1/src/controllers/Dynamics/Algorithm/: PostureStabilizer.cpp  PostureStabilizer.h
GO1/src/controllers/Dynamics/Calculator/: GeneralCalculator.cpp  GeneralCalculator.h  Kinematics.cpp  Kinematics.h  RBDL_Tool.cpp  RBDL_Tool.h
GO1/src/controllers/Dynamics/DataStremer/: TCPServer.cpp  TCPServer.h
GO1/src/controllers/Dynamics/Estimator/: KalmanFilter.cpp  KalmanFilter.h  KalmanFilterFixed.h  SlipDetector.cpp  SlipDetector.h  SlopeEstimator.cpp  SlopeEstimator.h
GO1/src/controllers/Dynamics/Utils/: DynamicsUtil.cpp  DynamicsUtil.h  TimeLog.h
GO1/src/simulate/: simulate.cc
include/rbdl/: rbdl_config.h
lib/: librbdl.so.3.1.3  librbdl_urdfreader.so.3.1.3
lib/cmake/RBDL/: RBDLConfig.cmake
lib/cmake/qpSWIFT/: qpSWIFT-targets.cmake
lib/pkgconfig/: rbdl.pc
model/: go1 original.xml  go1.xml  scene.xml
model/urdf/: go1.urdf
